[package]
name = "day2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="main1"
path="src/ArraysAndSlices.rs"
[[bin]]
name="main2"
path="src/BasicPrimitives.rs"
[[bin]]
name="main3"
path="src/LiteralsAndOperators.rs"
[[bin]]
name="main4"
path="src/Tuples.rs"