[package]
description = "Anchor Escrow"
edition = "2018"
name = "escrow"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"
doctest = false

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
production = []
no-idl = []

[dev-dependencies]
solana-sdk = "1.9.19"
solana-program = "1.9.19"
solana-program-test = "1.9.19"
bytemuck = "1.4.0"
anchor-client = {version = "0.24.2"}
assert_matches = "1.5.0"
bincode = "1.3.3"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }

[dependencies]
anchor-lang = {version = "0.24.2"}
anchor-spl = {version = "0.24.2"}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
